<resources>
    <string name="app_name">My Well-Being</string>
    <string name="test_bai">Test BAI</string>
    <string name="mood">Estado de ánimo</string>
    <string name="view_history">Ver Histórico</string>
    <string name="test_completed">Test ya completado</string>
    <string name="mood_completed">Estado de ánimo ya completado</string>
    <string name="q1">1.Torpe o entumecido</string>
    <string name="q2">2.Acalorado</string>
    <string name="q3">3.Con temblor en las piernas</string>
    <string name="q4">4.Incapaz de relajarse</string>
    <string name="q5">5.Con temor a que ocurra lo \n peor</string>
    <string name="q6">6.Mareado, o que se le va la \n cabeza</string>
    <string name="q7">7.Con latidos del corazón fuertes \n y acelerados</string>
    <string name="q8">8.Inestable</string>
    <string name="q9">9.Atemorizado o asustado</string>
    <string name="q10">10.Nervioso</string>
    <string name="q11">11.Con sensación de bloqueo</string>
    <string name="q12">12.Con temblores en las \n manos</string>
    <string name="q13">13.Inquieto, inseguro</string>
    <string name="q14">14.Con miedo a perder el \n control</string>
    <string name="q15">15.Con sensación de ahogo</string>
    <string name="q16">16.Con temor a morir</string>
    <string name="q17">17.Con miedo</string>
    <string name="q18">18.Con problemas \n digestivos</string>
    <string name="q19">19.Con desvanecimientos</string>
    <string name="q20">20.Con rubor facial</string>
    <string name="q21">21.Con sudores, fríos o \n calientes</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="exportar_csv">Exportar CSV</string>
    <string name="fecha_fin">Fecha fin</string>
    <string name="no">No</string>
    <string name="leve">Leve</string>
    <string name="moderado">Moderado</string>
    <string name="bastante">Bastante</string>
    <string name="enviar">Enviar</string>
    <string name="question_how_are_you_today">¿Cómo te encuentras hoy?</string>
    <string name="mood_very_bad">Muy mal 😞</string>
    <string name="mood_bad">Mal 😔</string>
    <string name="mood_regular">Regular 😐</string>
    <string name="mood_good">Bien 😊</string>
    <string name="mood_very_good">Muy Bien 😁</string>
</resources>
