<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_how_are_you_today"
        android:textSize="31sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_mood_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_very_bad"
        android:textSize="18sp"
        android:background="@null"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_mood_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_bad"
        android:textSize="18sp"
        android:background="@null"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_mood_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_regular"
        android:textSize="18sp"
        android:background="@null"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_mood_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_good"
        android:textSize="18sp"
        android:background="@null"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_mood_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_very_good"
        android:textSize="18sp"
        android:background="@null" />

</LinearLayout>
