<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_test_bai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_bai" />

        <Button
            android:id="@+id/btn_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_history" />

    </LinearLayout>
</RelativeLayout>
